--- a/index.html
+++ b/index.html
@@ -816,11 +816,37 @@ const parseDDMMYYYY = (s) => {
 };
 function isSameDay(a,b){ return a.getFullYear()==b.getFullYear() && a.getMonth()==b.getMonth() && a.getDate()==b.getDate(); }
 
-function toast(title, message, variant='primary'){
-  const container = document.getElementById('toastContainer');
-  const id = 't'+Date.now();
+<!-- TAMBAH helper ini DI ATAS fungsi toast() -->
+<script>
+function ensureToastContainer() {
+  // Pastikan host + container wujud
+  let host = document.getElementById('toastHost');
+  if (!host) {
+    host = document.createElement('div');
+    host.id = 'toastHost';
+    host.style.position = 'fixed';
+    host.style.top = '12px';
+    host.style.right = '12px';
+    host.style.zIndex = 4000;
+    document.body.appendChild(host);
+  }
+  let container = document.getElementById('toastContainer');
+  if (!container) {
+    container = document.createElement('div');
+    container.id = 'toastContainer';
+    container.className = 'toast-container';
+    host.appendChild(container);
+  }
+  return container;
+}
+
+// GANTIKAN fungsi toast() asal dengan versi "kebal" ini
+function toast(title, message, variant='primary') {
+  const container = ensureToastContainer();
+  const id = 't' + Date.now() + Math.random().toString(36).slice(2,7);
   const html = `
-    <div class="toast align-items-center text-bg-${variant} border-0 mb-2" id="${id}" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast align-items-center text-bg-${variant} border-0 mb-2" id="${id}"
+         role="alert" aria-live="assertive" aria-atomic="true" style="min-width:260px">
       <div class="d-flex">
         <div class="toast-body"><strong>${title}:</strong> ${message}</div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
@@ -828,19 +854,33 @@ function toast(title, message, variant='primary'){
     </div>`;
   container.insertAdjacentHTML('beforeend', html);
   const el = document.getElementById(id);
-  const t = new bootstrap.Toast(el, { delay: 3000 });
-  t.show();
-  el.addEventListener('hidden.bs.toast', ()=>el.remove());
+
+  // Guna Bootstrap jika sudah tersedia
+  try {
+    const BsToast = window.bootstrap?.Toast;
+    if (BsToast) {
+      const inst = BsToast.getOrCreateInstance(el, { delay: 3000, autohide: true });
+      el.addEventListener('hidden.bs.toast', () => el.remove());
+      inst.show();
+      return;
+    }
+  } catch (_) { /* teruskan ke fallback */ }
+
+  // Fallback manual (kalau bootstrap.Toast belum siap)
+  el.classList.add('show');
+  setTimeout(() => { el.classList.remove('show'); el.remove(); }, 3000);
 }
+</script>
+
 
 /* =======================
    WHATSAPP HELPERS (TEKS) – dikekalkan
    ======================= */
 function composeNadiWhatsAppText(data){
   const lines = [
-    'Assalamualaikum, ini dari Klinik SihatSokmo.',
+    'Assalamualaikum, saya dari Klinik SihatSokmo.',
     '',
-    'Laporan Saringan NADI:',
+    'Laporan Saringan Kesihatan:',
     `• Nama: ${data.nama || '-'}`,
     `• IC: ${data.ic || '-'}`,
     `• Alamat: ${data.alamat || '-'}`,
